--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta charset="utf-8">
 <head>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="datamaps/dist/datamaps.world.min.js"></script>
   <style type="text/css">
     rect {
         fill:teal;
@@ -11,8 +13,9 @@
   </style>
 </head>
 <body>
+  <div id="container" style="position: relative; width: 1000px; height: 500px;"></div>
   <script type="text/javascript">
-  
+  var map = new Datamap({element: document.getElementById('container')});
   d3.json("data/countries_co2_raw_data.json", function(data) {
   
   clean_data = []
