--- a/index.html
+++ b/index.html
@@ -93,65 +93,104 @@
             var dataLoaded = function (error, _data, _long_lat) {
                 if (!error) {
 
-                    console.log(_long_lat);
-                    // Wrangle Data
-                    flat_data = []
 
-                    _data.Root.data.record.forEach(function(d){
-                    if("__text" in d.field[3]){
-                    var country_name = d.field[0]["__text"]
-                    var country_id = d.field[0]["_key"]
-                    var year = d.field[2]["__text"]
-                    var emissions = d.field[3]["__text"]
+                function flatData (data, param){
 
-                    flat_data.push({
-                        "name": country_name,
-                        "year": year,
-                        "emissions": emissions,
-                        "country_id": country_id
+                      var clean_data = []
 
-                    })
-                    }})
-                    
-                    var c_array = []
-                    var id_array = []
 
-                    flat_data.forEach(function(d){
-                      if (c_array.indexOf(d.name) == -1){
-                        c_array.push(d.name)
-                        id_array.push(d.country_id)
-                      }
-                    })
+                      data.Root.data.record.forEach(function(d){
+                        if("__text" in d.field[3]){
+                        var country_name = d.field[0]["__text"]
+                        var country_id = d.field[0]["_key"]
+                        var year = d.field[2]["__text"]
+                        var emissions = d.field[3]["__text"]
 
-                    var clean_data = []
 
-                    var scale = d3.scale.ordinal()
+                        clean_data.push({
+                            "name": country_name,
+                            "year": year,
+                            param : emissions,
+                            "country_id": country_id
 
-                    scale.domain(d3.range(1960, 2014))
-                    scale.range(d3.range(0, 53))
+                        })
+                        }})
 
-                    //console.log(c_array)
+                          return clean_data
 
-                    c_array.forEach(function(d, i){
-                     var years = d3.range(53).map(function () {
-                          return -1; 
-                      });
-                      clean_data.push({
-                        "name": d,
-                        "country_id": id_array[i],
-                        "years": years
-                      })
-                    });
+                    }
+                        var clean_co2 = flatData(_data, "emissions")
+                        var clean_gdp = flatData(_gdpdata, "gdp")
+                        var clean_pop = flatData(_popdata, "pop")
 
-                    flat_data.forEach(function(d){
-                      for (var i = 0; i < clean_data.length ; i++){
-                        if (clean_data[i].name == d.name){
-                          clean_data[i]["years"][scale(d.year)] = d.emissions
-                        }
-                      }
-                    })
+                        var c_array = []
+                        var id_array = []
 
-                  co2Data = clean_data
+                        clean_co2.forEach(function(d){
+                          if (c_array.indexOf(d.name) == -1){
+                            c_array.push(d.name)
+                            id_array.push(d.country_id)
+                          }
+                        })
+
+                        var cleanest_data = []
+
+                        var scale = d3.scale.ordinal()
+
+                        scale.domain(d3.range(1960, 2014))
+                        scale.range(d3.range(0, 53))
+
+                        c_array.forEach(function(d, i){
+                         var years = d3.range(53).map(function () {
+                              return -1; 
+                          });
+
+                         var lon = -1
+                         var lat = -1
+                         _longlat.data.forEach(function(d){
+                          if (d[10] == id_array[i]){
+                            lon = d[13]
+                            lat = d[12]
+                          }
+                         })
+
+                          cleanest_data.push({
+                            "name": d,
+                            "country_id": id_array[i],
+                            "years": years,
+                            "gdp": years,
+                            "pop": years,
+                            "longitude": lon,
+                            "latitude": lat
+                          })
+                        });
+
+
+                        clean_co2.forEach(function(d){
+                          for (var i = 0; i < cleanest_data.length ; i++){
+                            if (cleanest_data[i].name == d.name){
+                              cleanest_data[i]["years"][scale(d.year)] = d.param
+                            }
+                          }
+                        })
+
+                        clean_gdp.forEach(function(d){
+                          for (var i = 0; i < cleanest_data.length ; i++){
+                            if (cleanest_data[i].name == d.name){
+                              cleanest_data[i]["gdp"][scale(d.year)] = d.param
+                            }
+                          }
+                        })
+
+                        clean_pop.forEach(function(d){
+                          for (var i = 0; i < cleanest_data.length ; i++){
+                            if (cleanest_data[i].name == d.name){
+                              cleanest_data[i]["pop"][scale(d.year)] = d.param
+                            }
+                          }
+                        })
+
+                  co2Data = cleanest_data
                                     
 
                   initVis();
@@ -161,9 +200,11 @@
 
              //load data here and call "dataLoaded" afterwards
                 queue()
-                .defer(d3.json, 'data/countries_co2_raw_data.json') 
+                .defer(d3.json, 'data/countries_co2_raw_data.json')
+                .defer(d3.json, 'data/gdp_raw_data.json')
+                .defer(d3.json, 'data/pop_raw_data.json')
                 .defer(d3.json, 'data/long_lat.json')
-                .await(function(error, file1, file2) { dataLoaded(error, file1, file2); });
+                .await(dataLoaded);
 
                 // bind GDP button to a function
                     d3.select("#gdpBtn").on("click", function() {
