--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             }
 
             // call this function after both files are loaded -- error should be "null" if no error
-            var dataLoaded = function (error, _data, _long_lat) {
+            var dataLoaded = function (error, _data, _gdpdata, _popdata, _longlat) {
                 if (!error) {
 
 
