country vis updated

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <div class="col-md-10" id="worldVis">
 
             </div>
-            <!--<div class="col-md-1" id="countVis">-->
+        </div>
+        <div class="row">
+                 <!--<div class="col-md-1" id="countVis">-->
             <div id="countVis">
                 <!-- TODO: delete placeholder svg element -->
 <!--                 <svg width="300" height="250" style="background-color: lightcoral">
