--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
                 //Save co2, gdp, population to global variable
                   co2Data = cleanest_data 
-
+                  console.log(co2Data)
                 //Consolodate energy data
                     var ec_array = []
                     var eid_array = []
