--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
     <link rel="stylesheet" type="text/css" href="css/myStyle.css">
 
     <!-- add own scripts-->
-    <script src = "js/worldvis.js"></script>
-    <script src = "js/countryvis_usage.js"></script>
-    <script src = "js/countryvis_compare.js"></script>
-    <script src = "js/circlevis.js"></script>
     <script src = "js/temperaturevis.js"></script>
-    <script src = "js/sectorvis.js"></script>
 
 </head>
 <body>
@@ -81,12 +76,12 @@
       <p class="title4" id="title4">The Intergovernmental Panel on Climate Change (IPCC) reported in 2014 that scientists were more than 95% certain that <br>most of global warming is caused by <text class="emphasis_1">increasing concentrations of greenhouse gases</text> and <text class="emphasis_1">other human activities.</text></p>
       <p class="title5">This visualization will explore exactly that.</p>
       <p class="temp_title_3">READY?</p>
-      <a href="visualization.html#chapter_one"><p class="temp_title_4">TAKE ME TO THE VISUALIZATION</p></a>
+      <a href="visualization.html#chapter_one"><p class="temp_title_4">LAUNCH VISUALIZATION</p></a>
  
     </div>
   
   <script>
-      
+
         //to fade things in
         var fs = 1000;
         var fs_2 = 0;
