fixed tooltips animation bug

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 
         <div class="row">
             <div class="col-md-12" id="worldVis">
+                <div class="tooltip_bubbles">Here is where we will say something.</div>
+
             </div>
 
         </div>
