--- a/visualization.html
+++ b/visualization.html
@@ -362,6 +362,8 @@
                     //Store consolodated energy data in global variable
                     engData = cleanest_edata;
 
+                    co2Data.forEach(function(d){if (d.name == "Australia"){console.log(d)}})
+
 
                   initVis();
                                 }
