added text to chapter 2

--- a/visualization.html
+++ b/visualization.html
@@ -41,6 +41,7 @@
             <li><a href="index.html" id="nav">BACKGROUND</a></li>
             <li><a href="visualization.html#chapter_one" id="nav2">VISUALIZATION</a></li>
             <li><a href="https://github.com/azhong1/cs171-smith-zhong-finalproject" id="nav3">GIT</a></li>
+            <li><a href="https://docs.google.com/document/d/1CMFDlRChkY_jYVbcKnQ7r_KYUoOQrEGPPxC4wvye3mQ" id="nav5">PROCESS BOOK</a></li>
             <li><a href="" id="nav4">VIDEO</a></li>
           </ul>
         </div>
@@ -67,9 +68,11 @@
     <div class="container" >
         <div id="sectorVis">
           <p class="history_title">WHERE EXACTLY ARE OUR CARBON EMISSIONS FROM?</p>
-          <p class="sector_text">United States Carbon Emissions and Energy Consumption per Sector, 2011.</p>
+          <p class="sector_text"><strong>United States Carbon Emissions and Energy Consumption per Sector, 2011.</strong></p>
+          <p class="sector_legend">*Weights on mouseover refer to the total percentage of primary energy going into the target node.</p>
         </div>
         <div id="sankey_basic" style="height: 400px;"></div>
+        <div class="sector_explain">Primary energy refers to energy before transformation to other end-use fuels. "This is equal to indigenous production plus imports and stock changes, minus exports and fuels supplied to ships and aircraft engaged in international transport." - World Bank 2014.</div>
     </div>
   </div>
   
