ready for grading

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <link rel="stylesheet" type="text/css" href="css/myStyle.css">
 
     <!-- add own scripts-->
+    <script src = "js/worldvis.js"></script>
+    <script src = "js/countryvis_usage.js"></script>
+    <script src = "js/countryvis_compare.js"></script>
+    <script src = "js/circlevis.js"></script>
     <script src = "js/temperaturevis.js"></script>
+    <script src = "js/sectorvis.js"></script>
 
 </head>
 <body>
@@ -33,7 +38,8 @@
             <li><a href="index.html" id="nav">BACKGROUND</a></li>
             <li><a href="visualization.html#chapter_one" id="nav2">VISUALIZATION</a></li>
             <li><a href="github.com/azhong1/cs171-smith-zhong-finalproject" id="nav3">GIT</a></li>
-            <li><a href="" id="nav4">VIDEO</a></li>
+            <li><a href="https://docs.google.com/document/d/1CMFDlRChkY_jYVbcKnQ7r_KYUoOQrEGPPxC4wvye3mQ" id="nav5">PROCESS BOOK</a></li>
+            <li><a href="http://youtu.be/zex2eVBCnZ4" id="nav4">VIDEO</a></li>
           </ul>
         </div>
     <div class="div1" id="back">
@@ -43,7 +49,7 @@
 
     <div class="col-md-12">
       <p class="heading-begin" id="1">C&nbspA&nbspR&nbspB&nbspO&nbspN&nbsp E&nbspM&nbspI&nbspS&nbspS&nbspI&nbspO&nbspN&nbspS </p>
-      <p class="heading-middle" id="2">an economic perspective</p>
+      <p class="heading-middle" id="2">and energy consumption</p>
       <a href="#info"><p class="temp_title_begin">WHY IS THIS IMPORTANT?</p></a> 
       <a href="visualization.html#chapter_one"><p class="heading-end">I already know. Take me to the visualization</p></a>
     </div>
@@ -80,6 +86,7 @@
     </div>
   
   <script>
+        
         //to fade things in
         var fs = 1000;
         var fs_2 = 0;
