--- a/visualization.html
+++ b/visualization.html
@@ -42,7 +42,7 @@
             <li><a href="visualization.html#chapter_one" id="nav2">VISUALIZATION</a></li>
             <li><a href="https://github.com/azhong1/cs171-smith-zhong-finalproject" id="nav3">GIT</a></li>
             <li><a href="https://docs.google.com/document/d/1CMFDlRChkY_jYVbcKnQ7r_KYUoOQrEGPPxC4wvye3mQ" id="nav5">PROCESS BOOK</a></li>
-            <li><a href="" id="nav4">VIDEO</a></li>
+            <li><a href="http://youtu.be/zex2eVBCnZ4" id="nav4">VIDEO</a></li>
           </ul>
         </div>
       <div class="container" >
@@ -75,9 +75,10 @@
         <div class="sector_explain">Primary energy refers to energy before transformation to other end-use fuels. "This is equal to indigenous production plus imports and stock changes, minus exports and fuels supplied to ships and aircraft engaged in international transport." - World Bank 2014.</div>
     </div>
   </div>
-  
+
   <script>
 //console.log("hello");
+        
         sankey();
       
         //to fade things in
@@ -364,8 +365,6 @@
 
                     //Store consolodated energy data in global variable
                     engData = cleanest_edata;
-
-                    co2Data.forEach(function(d){if (d.name == "Australia"){console.log(d)}})
 
 
                   initVis();
